--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         // Keep this updated to the latest version:
         // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
-        classpath 'io.fabric.tools:gradle:1.25.1'
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 apply plugin: 'com.android.application'
@@ -35,7 +35,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     signingConfigs {
         release {
             storeFile file(buildProperties.secrets['keyStore'].string)
@@ -65,7 +65,7 @@ android {
         applicationId "com.fullmeadalchemist.mustwatch"
 
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
 
         versionCode 2
         versionName "1.0"
@@ -107,7 +107,7 @@ android {
         }
         release {
             minifyEnabled false
-            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), "proguard-rules.pro"
             signingConfig signingConfigs.release
 
@@ -117,6 +117,9 @@ android {
             pseudoLocalesEnabled false
             zipAlignEnabled true
         }
+    }
+    lintOptions {
+        check 'Interoperability'
     }
 }
 
@@ -129,11 +132,11 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:27.1.1"
-    implementation "com.android.support:design:27.1.1"
-    implementation "com.android.support:appcompat-v7:27.1.1"
-    implementation "com.android.support:recyclerview-v7:27.1.1"
-    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
     implementation "android.arch.lifecycle:runtime:$arch_lifecycle_version"
     implementation "android.arch.lifecycle:extensions:$arch_lifecycle_version"
@@ -142,7 +145,8 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'javax.annotation:javax.annotation-api:1.2'
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 
     //
     // UNITS OF MEASUREMENT (JSR 363)
@@ -195,11 +199,12 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-web:$espresso_version"
     androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espresso_version"
     androidTestImplementation "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
-    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
-        transitive = true
-    }
+//    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+//        transitive = true
+//    }
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha01"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha01"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha06"
 
 }
